fix not open topic header, empty lines when copy-past selected text, visible numbering line in Standart4PD style and change color code block wrap button

--- a/4pdasources/src/main/assets/forum/css/material_black.css
+++ b/4pdasources/src/main/assets/forum/css/material_black.css
@@ -212,7 +212,6 @@ span[style*="font-size:8pt"] * {
   background: rgba(53, 44, 13, 0.84);
 }
 .post-block.code .line {
-  display: block;
   min-height: 1.375rem;
 }
 .post-block.code .line:before,
@@ -223,7 +222,7 @@ span[style*="font-size:8pt"] * {
   width: 2rem;
   padding: 0 0.5rem 0 0;
   text-align: right;
-  font-family: 'roboto mono';
+  font-family: 'Roboto Mono';
   font-size: 0.875rem;
   line-height: 1.375rem;
   white-space: pre;
@@ -287,6 +286,7 @@ span[style*="font-size:8pt"] * {
   content: 'Код';
 }
 .post-block.code > .block-body {
+  font-family: 'Roboto Mono';
   padding: 0;
   margin: 0 0.5rem 0.5rem 2.5rem;
   overflow-x: auto;
