--- a/4pdasources/src/main/assets/forum/css/material_dark.css
+++ b/4pdasources/src/main/assets/forum/css/material_dark.css
@@ -207,7 +207,6 @@ span[style*="font-size:8pt"] * {
   background: rgba(80, 73, 48, 0.8);
 }
 .post-block.code .line {
-  display: block;
   min-height: 1.375rem;
 }
 .post-block.code .line:before,
@@ -218,7 +217,7 @@ span[style*="font-size:8pt"] * {
   width: 2rem;
   padding: 0 0.5rem 0 0;
   text-align: right;
-  font-family: 'roboto mono';
+  font-family: 'Roboto Mono';
   font-size: 0.875rem;
   line-height: 1.375rem;
   white-space: pre;
@@ -282,6 +281,7 @@ span[style*="font-size:8pt"] * {
   content: 'Код';
 }
 .post-block.code > .block-body {
+  font-family: 'Roboto Mono';
   padding: 0;
   margin: 0 0.5rem 0.5rem 2.5rem;
   overflow-x: auto;
